@@ -58,7 +58,7 @@ Package: auto-upgrade-tester
 Architecture: all
 XB-Python-Version: ${python:Versions}
 Depends: ${python:Depends}, ${misc:Depends}
-Recommends: kvm, ubuntu-vm-builder
+Recommends: qemu-kvm|kvm, ubuntu-vm-builder
 Description: Test release upgrades in a virtual environement
  A tool to do QA for release upgrades in ubuntu that performs upgrades
  in a virtual environment. Supported backends are "chroot", "kvm" and
