@@ -5,10 +5,15 @@ update-manager (1:0.126.3) UNRELEASEDkarmic; urgency=low
       not stale (LP: #450286)
   * DistUpgrade/DistUpgradeViewGtk.py:
     - deal with io errors when writing the log (LP: #447693)
+  * debian/control:
+    - add or-dependency to qemu-kvm
   * DistUpgrade/DistUpgrade.cfg:
     - add policykit-gnome and gnome-mount to the forced obsoleted
       packages (thanks to seb128) 
   * merge translations from rosetta
+  * DistUpgrade/DistUpgradeQuirks.py:
+    - stop docvert-converter when the upgrade starts, otherwise
+      OOo will not upgrade at all (LP: #450569)
 
  -- Michael Vogt <michael.vogt@ubuntu.com>  Tue, 13 Oct 2009 15:47:50 +0200
 
